# ruspiro-mailbox

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  Xargo.toml  build.sh  makefile
.github/workflows/: ci.yml
src/: _message.rs  interface.rs  lib.rs  propertytags.rs
src/message/: mailboxbatch.rs  mailboxmessage.rs  mod.rs
src/propertytags/: macros.rs  mod.rs
