[package]
name = "ruspiro-mailbox"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.0" # remember to update html_root_url
description = "Raspberry Pi mailbox property tag interface API."
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-mailbox/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-mailbox/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "mailbox", "propertytag", "raspberrypi", "baremetal"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-mailbox", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-mailbox" }


[lib]

[dependencies]
paste = "1.0.1"
ruspiro-mmio-register = "0.1"
ruspiro-cache = "0.4"
ruspiro-error = "0.1"

[features]
ruspiro_pi3 = [
    "ruspiro-mmio-register/ruspiro_pi3",
    "ruspiro-cache/ruspiro_pi3",
    "ruspiro-error/ruspiro_pi3"
]

[patch.crates-io]
ruspiro-mmio-register = { git = "https://github.com/RusPiRo/ruspiro-mmio-register.git", branch = "master" }
ruspiro-cache = { git = "https://github.com/RusPiRo/ruspiro-cache.git", branch = "master" }
ruspiro-error = { git = "https://github.com/RusPiRo/ruspiro-error.git", branch = "master" }
