[package]
name = "ruspiro-mailbox"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.1" # remember to update html_root_url
description = "Raspberry Pi mailbox property tag interface API."
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-mailbox/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-mailbox/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "mailbox", "propertytag", "raspberrypi", "baremetal"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
paste = "~1.0.5"
ruspiro-mmio-register = "~0.1.3"
ruspiro-cache = "~0.4.1"
ruspiro-error = "~0.1.1"

[features]
ruspiro_pi3 = []

[patch.crates-io]
ruspiro-mmio-register = { git = "https://github.com/RusPiRo/ruspiro-mmio-register.git", branch = "development" }
ruspiro-cache = { git = "https://github.com/RusPiRo/ruspiro-cache.git", branch = "development" }
ruspiro-error = { git = "https://github.com/RusPiRo/ruspiro-error.git", branch = "development" }
